--- a/index.html
+++ b/index.html
@@ -36,15 +36,9 @@
       background: #16a34a;
     }
     /* 3D Depth Utilities */
-    .perspective-1000 {
-      perspective: 1000px;
-    }
-    .perspective-2000 {
-      perspective: 2000px;
-    }
-    .preserve-3d {
-      transform-style: preserve-3d;
-    }
+    .perspective-1000 { perspective: 1000px; }
+    .perspective-2000 { perspective: 2000px; }
+    .preserve-3d { transform-style: preserve-3d; }
     .hover-3d:hover {
       transform: translateY(-8px) rotateX(4deg) rotateY(-2deg);
       box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.15);
@@ -65,34 +59,18 @@
       background-size: 30px 30px;
     }
     
-    /* Animation Utilities */
     @keyframes float {
       0% { transform: translateY(0px); }
       50% { transform: translateY(-10px); }
       100% { transform: translateY(0px); }
     }
-    .animate-float {
-      animation: float 4s ease-in-out infinite;
-    }
+    .animate-float { animation: float 4s ease-in-out infinite; }
 
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    @keyframes slideInFromBottom {
-      from { transform: translateY(20px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-    @keyframes slideInFromLeft {
-      from { transform: translateX(-20px); opacity: 0; }
-      to { transform: translateX(0); opacity: 1; }
-    }
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    @keyframes slideInFromBottom { from { transform: translateY(20px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
+    @keyframes slideInFromLeft { from { transform: translateX(-20px); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
 
-    .animate-in {
-      animation-duration: 1s;
-      animation-fill-mode: both;
-      animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    .animate-in { animation-duration: 1s; animation-fill-mode: both; animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1); }
     .fade-in { animation-name: fadeIn; }
     .slide-in-from-bottom-12 { animation-name: slideInFromBottom; }
     .slide-in-from-bottom-16 { animation-name: slideInFromBottom; }
@@ -103,20 +81,22 @@
     .delay-200 { animation-delay: 200ms; }
     .delay-300 { animation-delay: 300ms; }
     .delay-1000 { animation-delay: 1000ms; }
-
   </style>
 <script type="importmap">
 {
   "imports": {
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
 <body class="bg-grid text-slate-900 scroll-smooth">
   <div id="root"></div>
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
