--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
 </head>
 <body class="bg-grid text-slate-900 scroll-smooth">
   <div id="root"></div>
-  <script type="module" src="./index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
