--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DRG Power Technology | Solar Energy Solutions Gurugram</title>
+  <meta name="description" content="Leading solar energy provider for Homes, Housing Societies, and Commercial sectors in Gurugram and Haryana. Get high-efficiency solar panels and professional installation.">
+  <meta name="keywords" content="Solar Panels Gurugram, Solar Energy Haryana, DRG Power Technology, Solar Installation India, Residential Solar Haryana, Industrial Solar Manesar">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://drgpower.com/">
+  <meta property="og:title" content="DRG Power Technology | Solar Energy Solutions">
+  <meta property="og:description" content=" Haryana's Leading Solar Energy Network. Premium Tier-1 Solar Panels for Homes and Businesses.">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1508514177221-188b1cf16e9d?auto=format&fit=crop&q=80&w=1200">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://drgpower.com/">
+  <meta property="twitter:title" content="DRG Power Technology | Solar Energy Solutions">
+  <meta property="twitter:description" content=" Haryana's Leading Solar Energy Network. Premium Tier-1 Solar Panels for Homes and Businesses.">
+  <meta property="twitter:image" content="https://images.unsplash.com/photo-1508514177221-188b1cf16e9d?auto=format&fit=crop&q=80&w=1200">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
