--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,16 +24,19 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary: #15803d;
-      --secondary: #0f172a;
+      --primary: #BE1E2D;
+      --primary-dark: #8b1520;
+      --secondary: #000000;
+      --accent: #FFFFFF;
     }
     body {
       font-family: 'Inter', sans-serif;
       overflow-x: hidden;
-      background-color: #f8fafc;
+      background-color: #ffffff;
+      color: #111111;
     }
     .scroll-smooth {
       scroll-behavior: smooth;
@@ -43,7 +45,7 @@
       position: absolute;
       top: -40px;
       left: 0;
-      background: #15803d;
+      background: #BE1E2D;
       color: white;
       padding: 8px;
       z-index: 100;
@@ -53,32 +55,46 @@
       top: 0;
     }
     :focus-visible {
-      outline: 3px solid #15803d;
+      outline: 3px solid #BE1E2D;
       outline-offset: 2px;
     }
     .perspective-1000 { perspective: 1000px; }
     .perspective-2000 { perspective: 2000px; }
     .preserve-3d { transform-style: preserve-3d; }
     .glass {
-      background: rgba(255, 255, 255, 0.85);
+      background: rgba(255, 255, 255, 0.9);
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
-      border: 1px solid rgba(255, 255, 255, 0.3);
+      border: 1px solid rgba(0, 0, 0, 0.05);
     }
     .text-gradient {
-      background: linear-gradient(135deg, #16a34a 0%, #065f46 100%);
+      background: linear-gradient(135deg, #BE1E2D 0%, #000000 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
     .bg-grid {
-      background-image: radial-gradient(#e2e8f0 1px, transparent 1px);
-      background-size: 30px 30px;
+      background-image: radial-gradient(rgba(0,0,0,0.05) 1px, transparent 1px);
+      background-size: 40px 40px;
     }
     @keyframes float {
       0%, 100% { transform: translateY(0px); }
       50% { transform: translateY(-10px); }
     }
     .animate-float { animation: float 4s ease-in-out infinite; }
+    
+    .industrial-border {
+      border-left: 4px solid var(--primary);
+    }
+
+    .btn-red {
+      background-color: var(--primary);
+      transition: all 0.3s ease;
+    }
+    .btn-red:hover {
+      background-color: var(--primary-dark);
+      transform: translateY(-2px);
+      box-shadow: 0 10px 20px -5px rgba(190, 30, 45, 0.4);
+    }
   </style>
   <script type="importmap">
 {
@@ -93,7 +109,7 @@
 }
 </script>
 </head>
-<body class="bg-grid text-slate-900">
+<body class="bg-grid">
   <a href="#main-content" class="skip-link">Skip to main content</a>
   <div id="root"></div>
   <script type="module" src="./index.tsx"></script>
