feat: Add favicon and improve logo rendering
Adds a favicon to the website and enhances the logo component to include image loading error handling and adjusted sizing for different contexts (header vs. footer).

The logo image URL in constants.tsx has been updated to be properly encoded to handle spaces and special characters, ensuring correct rendering. The `index.html` also now includes the favicon link.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,8 @@
   <meta name="description" content="Leading solar energy provider for Homes, Housing Societies, and Commercial sectors in Gurugram and Haryana. Get high-efficiency solar panels and professional installation.">
   <meta name="keywords" content="Solar Panels Gurugram, Solar Energy Haryana, DRG Power Technology, Solar Installation India, Residential Solar Haryana, Industrial Solar Manesar">
   
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/AnmolMittal09/DRG-Power/main/Untitled%20design%20%282%29.png">
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://drgpower.com/">
