--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     body {
       font-family: 'Inter', sans-serif;
       overflow-x: hidden;
-      background-color: #ffffff;
-      color: #111111;
+      background-color: #050505;
+      color: #eeeeee;
     }
     .scroll-smooth {
       scroll-behavior: smooth;
@@ -66,10 +66,10 @@
     .perspective-2000 { perspective: 2000px; }
     .preserve-3d { transform-style: preserve-3d; }
     .glass {
-      background: rgba(255, 255, 255, 0.9);
+      background: rgba(0, 0, 0, 0.7);
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
-      border: 1px solid rgba(0, 0, 0, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.05);
     }
     .text-gradient {
       background: linear-gradient(135deg, var(--primary) 0%, var(--accent-flare) 100%);
@@ -77,7 +77,7 @@
       -webkit-text-fill-color: transparent;
     }
     .bg-grid {
-      background-image: radial-gradient(rgba(0,0,0,0.05) 1px, transparent 1px);
+      background-image: radial-gradient(rgba(255,255,255,0.03) 1px, transparent 1px);
       background-size: 40px 40px;
     }
     @keyframes float {
